2006-11-05 Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added: OleDbFactory.cs

2006-05-23 Boris Kirzner <borisk@mainsoft.com>
	* OleDbConnection.cs: add MonoTODO to GetOleDbSchemaTable.

2006-05-09  Konstantin Triger <kostat@mainsoft.com>

	* OleDbConnection.cs: fix GetOleDbSchemaTable for OleDbSchemaGuid.Tables.

2006-04-26  Konstantin Triger <kostat@mainsoft.com>

        * OleDbParameter.cs: map NCHAR to VARCHAR type.

2006-03-21	Boris Kirzner <borisk@mainsoft.com>
	* OleDbConnection.cs: resolve ambiguity.

2006-03-06  Konstantin Triger <kostat@mainsoft.com>

	* OleDbConnection.cs: compare up to the provider name length.

2005-16-11 Boris Kirzner <borisk@mainsoft.com>
	* OleDbConnection.cs: Added override for CreateException().

2005-11-07 Konstantin Triger <kostat@mainsoft.com>

	* OleDbConnection.cs: retrieve the StringManager from AppDomain
		to workaround lack of correct AppDomain management in GH

2005-09-05 Boris Kirzner <borisk@mainsoft.com>
	* OleDbConvert.cs: return underlined value type in case of enum value.
	* OleDbParameter.cs:
		- Update of DbType should also update OleDbType property. 
		- Do not update parameter type is the value set is DbNull.

2005-06-21  Konstantin  Triger <kostat@mainsoft.com>

	* OleDbConvert.cs: mapping OleDbType.Guid to Types.CHAR